--- a/documentation/machine_programmer.css
+++ b/documentation/machine_programmer.css
@@ -1,5 +1,6 @@
  
 /* start css.sty */
+.cmr-6{font-size:50%;}
 .cmr-17x-x-120{font-size:170%;}
 .cmr-12x-x-120{font-size:120%;}
 .cmsy-10x-x-144{font-size:120%;}
@@ -10,6 +11,7 @@
 .cmtt-10x-x-109{font-family: monospace;}
 .cmbx-12{ font-weight: bold;}
 .cmti-12{ font-style: italic;}
+.cmmi-12{font-style: italic;}
 p.noindent { text-indent: 0em }
 td p.noindent { text-indent: 0em; margin-top:0em; }
 p.nopar { text-indent: 0em; }
@@ -122,24 +124,28 @@ div.abstract {width:100%;}
 dt.printshorthands{float:left; clear:left; margin-right:1em;}
 dd.thebibliography {margin-left: 2.5em;}
 dt.thebibliography {float:left; clear:left; margin-right:1em;}
-.minitoc-l,.minilot-l,.minilof-l {text-align:left;margin-left:3em;}
-.minitoc-c,.minilot-c,.minilof-c {text-align:center;margin-left:3em;}
-.minitoc-r,.minilot-r,.minilof-r {text-align:right;margin-left:3em;}
-DIV.minitoc,DIV.minilot,DIV.minilof{margin-left:3em;}
-.minitoc .sectionToc { font-weight:bold;} 
-.parttoc-l,.partlof-l,.partlot-l{text-align:left;}
-.parttoc-c,.partlof-c,.partlot-c{text-align:center;}
-.parttoc-r,.partlof-r,.partlot-r{text-align:right;}
-.secttoc-l,.sectlof-l,.sectlot-l{text-align:left;}
-.secttoc-c,.sectlof-c,.sectlot-c{text-align:center;}
-.secttoc-r,.sectlof-r,.sectlot-r{text-align:right;}
 .lstlisting .label{margin-right:0.5em; }
 div.lstlisting{font-family: monospace; white-space: nowrap; margin-top:0.5em; margin-bottom:0.5em; }
 div.lstinputlisting{ font-family: monospace; white-space: nowrap; }
 .lstinputlisting .label{margin-right:0.5em;}
+table[rules] {border-left:solid black 0.4pt; border-right:solid black 0.4pt; }
+div.longtable{text-align:center;}
 div.verbatiminput {font-family: monospace; white-space: nowrap; }
 .figure img.graphics {margin-left:10%;}
 .marginpar {width:5em; float:right; text-align:left; margin-left:auto; font-size:85%; text-decoration:none;color:#aaa;} 
 @media screen and (min-width: 46.3em){ .marginpar{margin-right:-6em;} }
+tr#TBL-3-1- td{border-top:0.13159em solid} 
+tr#TBL-3-2- td{border-bottom:0.08224em solid}
+tr#TBL-3-34- td{border-bottom:0.13159em solid}
+tr#TBL-5-1- td{border-top:0.13159em solid} 
+td#TBL-5-1-5{border-left:solid black 0.4pt;border-right:solid black 0.4pt;}
+tr#TBL-5-1- td{border-bottom:0.08224em solid}
+tr#TBL-5-2- td{border-bottom:0.08224em solid}
+tr#TBL-5-3- td{border-bottom:0.08224em solid}
+tr#TBL-5-4- td{border-bottom:0.08224em solid}
+tr#TBL-5-4- td{border-bottom:0.08224em solid}
+td#TBL-5-5-5{border-left:solid black 0.4pt;border-right:solid black 0.4pt;}
+tr#TBL-5-5- td{border-bottom:0.13159em solid}
+tr#TBL-5-21- td{border-bottom:0.13159em solid}
 /* end css.sty */
 
